Fix header intro subtitle element text spacing

--- a/assets/stylesheets/_components/header_intro.scss
+++ b/assets/stylesheets/_components/header_intro.scss
@@ -11,10 +11,10 @@
       line-height: 5px;
     }
 
-    small {
+    h2 {
       color: $fg_negative;
       font-size: 28px;
-      line-height: 5px;
+      line-height: 110%;
     }
   }
 
